2008-05-08  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Simon.

        Use native Windows library handling (instead of QLibrary) 
        for Qt/Win32's PlatformModule.

        * platform/FileSystem.h:
        (WebCore::PlatformModuleVersion::PlatformModuleVersion):
        * platform/qt/FileSystemQt.cpp:
        (WebCore::unloadModule):

2008-05-08  Simon Hausmann  <hausmann@webkit.org>

        Reviewed and found by Holger.

        Include .css in the list of extensions for text/css. Fixes
        fast/loader/local-css-allowed-in-strict-mode.html.

        * platform/qt/MIMETypeRegistryQt.cpp:

2008-05-08  Simon Hausmann  <hausmann@webkit.org>

        Fix the Qt and Wx build when compiling without offline app support.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::canCachePage):

2008-05-07  Sam Weinig  <sam@webkit.org>

        Reviewed by Adele Peterson

        Update MessageEvent to match the latest version of the HTML5 spec,
        adding the lastEventId attribute.

        * dom/MessageEvent.cpp:
        (WebCore::MessageEvent::MessageEvent):
        (WebCore::MessageEvent::initMessageEvent):
        * dom/MessageEvent.h:
        (WebCore::MessageEvent::lastEventId):
        * dom/MessageEvent.idl:
        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::postMessage):

2008-05-07  Stephanie Lewis <slewis@apple.com>

        Reviewed by Maciej.

        remove non-functioning code.  If onunload should be fired from these nodes then
        a WindowEventListener needs to be set.  However, Firefox and IE also do not
        fire onunload events for these cases.

        Test: fast/events/onunload-not-on-body.html 
        
        * html/HTMLFrameElementBase.cpp:
        (WebCore::HTMLFrameElementBase::parseMappedAttribute):
        * html/HTMLObjectElement.cpp
        (WebCore::HTMLObjectElement::parseMappedAttribute):

2008-05-07  Dan Bernstein  <mitz@apple.com>

        Reviewed by John Sullivan.
